--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,13 @@
 utimer.log
 user-settings.ini
 uTimer.sqlite
+uTimer
+
+# AI files
+.claude/
+
+# other build fuiles
+build/
 
 # VS project files
 .vs/
